[tool.poetry]
name = "twitter-py"
version = "0.0.2"
description = ""
authors = ["MehdiRtal <mehdirtal7@pm.me>"]
packages = [{include = "twitter_py"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
bs4 = "^0.0.1"
fake-useragent = "^1.3.0"
pydantic = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
