[project]
name = "twitter-py"
version = "0.0.16"
authors = [
    { name = "MehdiRtal", email = "mehdirtal7@pm.me" }
]
dependencies = [
    "httpx>=0.27.0",
    "bs4>=0.0.2",
    "fake-useragent>=1.5.1",
    "pydantic>=2.6.4",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["twitter_py"]
